tests/analyzer/errors/unpure_field_default.rv
struct Person {
    age: int = getValue(),
}

fn main() { }

